# getset-display-settings

./: README.md  pyproject.toml
pywindisplay/: _main.py
