[tool.poetry]
name = "pywindisplay"
version = "0.1.0"
description = ""
authors = ["John Leonard <john@lowkeylabs.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.3"
loguru = "^0.7.0"
pywin32 = "^306"

[tool.poetry.scripts]
pywindisplay = "pywindisplay._main:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
